@@ -73,9 +73,9 @@ public class RecordXMLParserNesstarTest {
 
         // Then
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        validateCMMStudyResultAgainstSchema(result.getFirst());
 
-        var actualJson = objectMapper.writeValueAsString(result.get(0));
+        var actualJson = objectMapper.writeValueAsString(result.getFirst());
         var expectedJson = ResourceHandler.getResourceAsString("json/synthetic_compliant_record_nesstar.json");
 
         // Compare the generated JSON to the expected result
@@ -93,7 +93,7 @@ public class RecordXMLParserNesstarTest {
 
         // Then
         then(record).hasSize(1);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test
@@ -106,8 +106,8 @@ public class RecordXMLParserNesstarTest {
         // When
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(nesstarRepo, Path.of(recordXML.toURI()));
         then(record).hasSize(1);
-        validateCMMStudyResultAgainstSchema(record.get(0));
-        var jsonString = objectMapper.writeValueAsString(record.get(0));
+        validateCMMStudyResultAgainstSchema(record.getFirst());
+        var jsonString = objectMapper.writeValueAsString(record.getFirst());
         var actualTree = mapper.readTree(jsonString);
 
         // Then
@@ -123,7 +123,7 @@ public class RecordXMLParserNesstarTest {
         var expectedCmmStudyJsonString = ResourceHandler.getResource("xml/nesstar/synthetic_compliant_cmm_nesstar.xml");
 
         // When
-        var record = new RecordXMLParser(cmmStudyMapper).getRecord(nesstarRepo, Path.of(expectedCmmStudyJsonString.toURI())).get(0);
+        var record = new RecordXMLParser(cmmStudyMapper).getRecord(nesstarRepo, Path.of(expectedCmmStudyJsonString.toURI())).getFirst();
 
         // Then
         then(record.titleStudy()).containsKey("xy");
@@ -145,9 +145,9 @@ public class RecordXMLParserNesstarTest {
 
         // Then
         then(record).hasSize(1);
-        then(record.get(0).abstractField().size()).isEqualTo(4);
-        then(record.get(0).abstractField()).isEqualTo(expectedAbstract);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().abstractField().size()).isEqualTo(4);
+        then(record.getFirst().abstractField()).isEqualTo(expectedAbstract);
+        validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test // https://github.com/cessda/cessda.cdc.versions/issues/135
@@ -164,9 +164,9 @@ public class RecordXMLParserNesstarTest {
 
         // Then
         then(record).hasSize(1);
-        then(record.get(0).titleStudy().size()).isEqualTo(2);
-        then(record.get(0).titleStudy()).isEqualTo(expectedTitle);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().titleStudy().size()).isEqualTo(2);
+        then(record.getFirst().titleStudy()).isEqualTo(expectedTitle);
+        validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test()
@@ -207,8 +207,8 @@ public class RecordXMLParserNesstarTest {
 
         // Then
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
-        assertThatCmmRequiredFieldsAreExtracted(result.get(0));
+        validateCMMStudyResultAgainstSchema(result.getFirst());
+        assertThatCmmRequiredFieldsAreExtracted(result.getFirst());
     }
 
     private void validateCMMStudyResultAgainstSchema(CMMStudy record) throws IOException, ProcessingException {
@@ -259,9 +259,9 @@ public class RecordXMLParserNesstarTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(langRepo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        validateCMMStudyResultAgainstSchema(result.getFirst());
 
         // Assert the language is as expected
-        Assert.assertNotNull(result.get(0).titleStudy().get("zz"));
+        Assert.assertNotNull(result.getFirst().titleStudy().get("zz"));
     }
 }
